tried to fix borders not showing

--- a/style.css
+++ b/style.css
@@ -23,21 +23,19 @@ body {
 
 .game {
     display: grid;
-    border: black;
+    border: 5px solid black;
     grid-template-columns: repeat(3, 100px);
     grid-template-rows: repeat(3, 100px);
     gap: 0px;
     height: 300px;
     width: 300px;
-    border-width: 10px;
 }
 
 .square {
     width: 100%;
     height: 100%;
     background: white;
-    border: black;
-    border-width: 5px;
+    border: 5px solid black;
 }
 
 .x {
